--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -39,7 +39,7 @@ header > p {
     padding-bottom: 50px;
 }
 
-header a, footer a {
+header a {
     color: white;
     text-decoration: none;
     font-weight: bolder;
@@ -95,7 +95,11 @@ section#img02 {
 
 footer {
     background-color: black;
-    color: white;
+    color:white;
     text-align: center;
     padding: 10px;
+}
+
+footer a {
+    color: aqua;
 }
